--- a/style.css
+++ b/style.css
@@ -2,6 +2,7 @@ body {
     background: #667db6;
     background: -webkit-linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
     background: linear-gradient(to right, #667db6, #0082c8, #0082c8, #667db6);
+    user-select: none;
 }
 
 .tro_choi_danh_chu {
